[CHANGE] change strategy, working on big endian images

--- a/sweep.yaml
+++ b/sweep.yaml
@@ -5,19 +5,18 @@ program: train.py
 method: random
 
 # Project this sweep is part of
-project: mlops-course-001
-entity: av-team
+project: artefact-detection_test
+entity: hugo
 
 # Metric to optimize
 metric:
   name: mse
   goal: minimize
-
 # Parameters space to search
 parameters:
   log_preds:
     value: False
-  lr:
+  learning_rate:
     distribution: log_uniform_values
     min: 1e-5
     max: 1e-2
