--- a/sweep.yaml
+++ b/sweep.yaml
@@ -1,12 +1,9 @@
-# The program to run
-program: train.py
-
 # Method can be grid, random or bayes
 method: random
 
 # Project this sweep is part of
-project: artefact-detection_test
-entity: hugo
+project: artefact-detection-without-deletion-sweep
+entity: yuuuugo
 
 # Metric to optimize
 metric:
@@ -21,10 +18,21 @@ parameters:
     min: 1e-5
     max: 1e-2
   batch_size:
-    values: [4, 8, 16, 32, 64]
+    value: 8
   img_size:
-    value: [256, 512]
-  arch:
+    value: 512
+  model:
     values:
       - "ResUnet"
-      - "Unet"
+  epochs:
+    values: [50, 100]
+  gpus:
+    value: 3
+  seed:
+    value: 42
+  save:
+    value: False
+  saving_path:
+    value: "model/saved_models/low_endian/"
+  big_endian:
+    value: False
